[package]
name = "datasetwork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.3.0"
# For smaller dependencies
# surrealdb = { version = "1.3.0", default-features = false, features = ["full"] }

tokio = { version = "1", features = ["full"] }
anyhow = "1.0.81"
