[package]
name = "datasetwork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version = "1.3.1", features = ["kv-mem", "kv-rocksdb", "kv-speedb", "kv-fdb-7_1", "kv-tikv"] }
# For smaller dependencies
# surrealdb = { version = "1.3.0", default-features = false, features = ["full"] }
# foundationdb = { version = "0.9.0", features = ["fdb-7_1"]}

tokio = { version = "1.36.0", features = ["full", "macros", "rt-multi-thread"] }
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"

